tests/commonjs/commonjs.exp
Error --------------------------------------------------------------- Rel.js:4:3

Cannot call `f` with `0` bound to `x` because number is incompatible with
string.

Error: Rel.js:4
  4: f(0);
       ^ Cannot call `f` with `0` bound to `x` because number [1] is incompatible with string [2].
  References:
    4: f(0);
         ^ [1]: number
    2: function f(x:string) { }
                    ^^^^^^ [2]: string. See: Abs.js:2


Found 1 error
